@@ -3,6 +3,7 @@
 
 #include "RedWolf/common.hpp"
 #include "RedWolf/dat/VersionInfo.hpp"
+#include "RedWolf/events/EventHandler.hpp"
 #include "RedWolf/lif/glfw/GlfwManager.hpp"
 #include "RedWolf/lif/vulkan/Instance.hpp"
 #include "RedWolf/lif/vulkan/Interface.hpp"
@@ -37,46 +38,79 @@ namespace rw
       RedWolfManager(const Options& options);
 
       /**
+       * @brief Destructor.
+       */
+      ~RedWolfManager();
+
+      /**
+       * @brief Copy constructor.
+       */
+      RedWolfManager(const RedWolfManager&) = delete;
+
+      /**
+       * @brief Move constructor.
+       */
+      RedWolfManager(RedWolfManager&&) = delete;
+
+      /**
+       * @brief Copy-assignment operator.
+       */
+      RedWolfManager& operator=(const RedWolfManager&) = delete;
+
+      /**
+       * @brief Move-assignment operator.
+       */
+      RedWolfManager& operator=(RedWolfManager&&) = delete;
+
+      /**
+       * @brief Get the library event handler.
+       * @return Library event handler.
+       */
+      [[nodiscard]] rw::events::EventHandler& eventHandler();
+
+      /**
        * @brief Get the manager of the GLFW library.
        * @return Manager of the GLFW library.
        */
-      rw::lif::glfw::GlfwManager& glfwManager();
+      [[nodiscard]] rw::lif::glfw::GlfwManager& glfwManager();
 
       /**
        * @brief Get the library logger.
        * @return Library logger.
        */
-      rw::utils::Logger& logger();
+      [[nodiscard]] rw::utils::Logger& logger();
 
       /**
        * @brief Get the library settings manager.
        * @return Library settings manager.
        */
-      rw::utils::SettingsManager& settingsManager();
+      [[nodiscard]] rw::utils::SettingsManager& settingsManager();
 
       /**
        * @brief Get the library thread pool.
        * @return Library thread pool.
        */
-      rw::thread::ThreadPool& threadPool();
+      [[nodiscard]] rw::thread::ThreadPool& threadPool();
 
       /**
        * @brief Get the Vulkan instance of the library.
        * @return Vulkan instance of the library.
        */
-      rw::lif::vlk::Instance& vulkanInstance();
+      [[nodiscard]] rw::lif::vlk::Instance& vulkanInstance();
 
       /**
        * @brief Get the Vulkan API interface.
        * @return Vulkan API interface.
        */
-      rw::lif::vlk::Interface& vulkanInterface();
+      [[nodiscard]] rw::lif::vlk::Interface& vulkanInterface();
 
    private:
       rw::utils::Logger          logger_;          /**< Logger for the library. */
       rw::utils::SettingsManager settingsManager_; /**< Settings manager for the library. */
 
       rw::thread::ThreadPool threadPool_; /**< Default thread pool for the library. */
+
+      rw::events::EventHandler eventHandler_; /**< Event handler for the library. */
 
       rw::lif::glfw::GlfwManager glfwManager_;     /**< Manager for the GLFW library. */
       rw::lif::vlk::Interface    vulkanInterface_; /**< Interface to the Vulkan API. */
