@@ -4,7 +4,15 @@
 
 using namespace rw::core;
 
-BaseObject::BaseObject(RedWolfManager& manager, BaseObject* parent) : parent_{ parent }, threadPool_{ manager.threadPool() } {}
+BaseObject::BaseObject(RedWolfManager& manager, BaseObject* parent) : parent_{ parent }, eventHandler_{ manager.eventHandler() }
+{
+   eventHandler_.addObject(this);
+}
+
+BaseObject::~BaseObject()
+{
+   eventHandler_.removeObject(this);
+}
 
 void BaseObject::handle(const rw::events::BaseEvent& evnt, const BaseObject* sender)
 {
