@@ -39,6 +39,8 @@ Version 0.5.0
         - Add VersionInfo struct.
         - Add Vulkan BaseObject class.
         - Add Vulkan ImageView class.
+        - Add EventHandler class.
+        - Reworked event system to use a library-wide event handler.
         - Fix Timer destructor.
         - Fix sign of the time of day in the DateTime structure.
         - Improve comments.
